@@ -85,11 +85,11 @@ port_poll (EV_P_ ev_tstamp timeout)
   struct timespec ts;
   uint_t nget = 1;
 
-  EV_SUSPEND_CB;
+  EV_RELEASE_CB;
   ts.tv_sec  = (time_t)timeout;
   ts.tv_nsec = (long)(timeout - (ev_tstamp)ts.tv_sec) * 1e9;
   res = port_getn (backend_fd, port_events, port_eventmax, &nget, &ts);
-  EV_RESUME_CB;
+  EV_ACQUIRE_CB;
 
   if (res == -1)
     { 
